function import in, cannot compile

--- a/Motor_Control_CPP/Motor_Control_CPP.vcxproj
+++ b/Motor_Control_CPP/Motor_Control_CPP.vcxproj
@@ -80,6 +80,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AHRS.h" />
+    <ClInclude Include="CRC.h" />
+    <ClInclude Include="Data.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="Serial_Port.h" />
     <ClInclude Include="stdafx.h" />
