--- a/Motor_Control_CPP/Motor_Control_CPP.vcxproj.filters
+++ b/Motor_Control_CPP/Motor_Control_CPP.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="Packet.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="Data.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="CRC.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
