--- a/Motor_Control_CPP/Motor_Control_CPP.vcxproj
+++ b/Motor_Control_CPP/Motor_Control_CPP.vcxproj
@@ -89,11 +89,14 @@
     <ClInclude Include="Visual.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AHRS.cpp" />
     <ClCompile Include="Motor_Control_CPP.cpp" />
+    <ClCompile Include="Serial_Port.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Visual.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
