--- a/Motor_Control_CPP/Motor_Control_CPP.vcxproj.filters
+++ b/Motor_Control_CPP/Motor_Control_CPP.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="Visual.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
-    <ClInclude Include="AHRS.h">
-      <Filter>標頭檔</Filter>
-    </ClInclude>
     <ClInclude Include="Packet.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
@@ -42,12 +39,24 @@
     <ClInclude Include="CRC.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="AHRS.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
     <ClCompile Include="Motor_Control_CPP.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="AHRS.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Visual.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="Serial_Port.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
